--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body * {
 }
 
 body {
+    font-family: 'Open Sans', sans-serif;
     background-color: black;
     color: white;
 }
@@ -12,6 +13,8 @@ body {
 /* Nav */
 nav {
     background-color: transparent !important;
+    height: 85px;
+    font-weight: bold;
 }
 
 /* Header */
@@ -22,19 +25,18 @@ nav {
 /* Presentacion */
 
 .dropdown-divider {
-    border-top: 1px solid #43bccc;
+    border-top: 1px solid #4fa7b3;
     padding-bottom: 1rem;
 }
 
 .icon {
-    background-color: #43bccc;
-    padding: 0.5rem 0rem;
+    background-color: #4fa7b3;
 }
 
 /* Destacados */
 
 .card {
-    background-color: #43bccc;
+    background-color: #4fa7b3;
     border-width: thin;
     border-color: white;
 }
@@ -42,7 +44,7 @@ nav {
 /* Footer */
 
 footer {
-    background-color: #43bccc;
+    background-color: #4fa7b3;
     margin-bottom: 0px;
 }
 
@@ -53,3 +55,12 @@ i {
     padding-right: 1rem;
 }
 
+/* Popover */
+.popover {
+    color: #343a40;
+}
+
+/* Modal */
+.modal-content {
+    color: #343a40;
+}
