--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,13 @@ nav {
 
 @media screen and (max-width: 992px) {
     .navbar {
-        background-color:black;
+        background-color: black !important;
     }
 }
 
 /* Header */
-.carousel {
-    padding-top: 0%;
+#carousel {
+    padding-top: 85px;
 }
  
 /* Presentacion */
